--- a/Application.Web.Client/PageComponents/GameForm.razor
+++ b/Application.Web.Client/PageComponents/GameForm.razor
@@ -104,6 +104,6 @@
 
     async Task<IEnumerable<TourOperator>> SearchHandler(string searchText)
     {
-        return _db.GetAllDevelopers();
+        return _db.GetAllTourOperators();
     }
 }
