--- a/Application.Web.Client/PageComponents/IndividualGame.razor
+++ b/Application.Web.Client/PageComponents/IndividualGame.razor
@@ -1,7 +1,7 @@
 ﻿@using System.Text.RegularExpressions
 
 <div class="col-sm-12 col-md-4 p-3 text-center">
-    <div class="game-name">
+    <div class="tour-name">
         <a href="@url">@Game.TourName</a>
     </div>
 
@@ -11,11 +11,11 @@
         <a href="@url">
             @if (IsBase64(Game.Image))
             {
-                <img src="data:image/jpeg;base64,@Game.Image" class="game-image" />
+                <img src="data:image/jpeg;base64,@Game.Image" class="tour-image" />
             }
             else
             {
-                <img src="@Game.Image" alt="@Game.TourName" class="game-image" />
+                <img src="@Game.Image" alt="@Game.TourName" class="tour-image" />
             }
         </a>
     </div>
@@ -26,7 +26,7 @@
 
         </NotAuthorized>
         <Authorized>
-            <div class="game-card-footer">
+            <div class="tour-card-footer">
                 <div class="btn-group my-3 text-center" role="group">
                     <button type="button" class="btn btn-outline-info" @onclick="(() => OnEditGame.InvokeAsync(Game))">
                         <i class="fas fa-edit"></i>
