--- a/Application.Web.Client/Pages/GamePages/EditGame.razor
+++ b/Application.Web.Client/Pages/GamePages/EditGame.razor
@@ -10,19 +10,19 @@
 
 <div class="row">
     <div class="col">
-        <GameForm Game="game" OnValidSubmit="EditTheGame"></GameForm>
+        <GameForm Game="tour" OnValidSubmit="EditTheGame"></GameForm>
     </div>
 </div>
 
 @code {
     [Parameter]
-    public int GameId { get; set; }
+    public int TourId { get; set; }
 
-    Tour game;
+    Tour tour;
 
     protected override void OnInitialized()
     {
-        game = _db.GetGameById(GameId);
+        tour = _db.GetTourById(TourId);
     }
 
     void EditTheGame()
