--- a/Application.Web.Client/Pages/GamePages/GameDetails.razor
+++ b/Application.Web.Client/Pages/GamePages/GameDetails.razor
@@ -1,28 +1,28 @@
-﻿@page "/tours/{GameId:int}"
-@page "/tours/{GameId:int}/{GameName}"
+﻿@page "/tours/{TourId:int}"
+@page "/tours/{TourId:int}/{TourName}"
 
 
 
 <h3>TourDetails</h3>
 <div class="form-group">
-    <label>GameId: </label>
+    <label>TourId: </label>
     <div>
-        <label>@GameId</label>
+        <label>@TourId</label>
     </div>
 </div>
 <div class="form-group">
     <label>TourName: </label>
     <div>
-        <label>@GameName</label>
+        <label>@TourName</label>
     </div>
 </div>
 
 @code {
 
     [Parameter]
-    public int GameId { get; set; }
+    public int TourId { get; set; }
 
     [Parameter]
-    public string GameName { get; set; }
+    public string TourName { get; set; }
 
 }
