--- a/Application.Web.Client/wwwroot/css/MySuperCSS.css
+++ b/Application.Web.Client/wwwroot/css/MySuperCSS.css
@@ -1,4 +1,4 @@
-﻿.game-name {
+﻿.tour-name {
     font-size: 20px;
     font-weight: bold;
     text-transform: uppercase;
@@ -16,12 +16,12 @@
     padding: 5px 0;
 }
 
-.game-image {
+.tour-image {
     max-width: 200px;
     max-height: 250px;
 }
 
-.game-card-footer {
+.tour-card-footer {
     background-color: #e9e6ff;
     border-radius: 0 0 5px 5px;
 }
