Переделал систему под 2 акторов, настроил политику страниц + рефакторинг

--- a/Application.Web.Client/Shared/NavMenu.razor
+++ b/Application.Web.Client/Shared/NavMenu.razor
@@ -15,7 +15,7 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <AuthorizeView Roles="Admin,User,Studio">
+            <AuthorizeView Roles="Admin,User">
                 <NotAuthorized>
 
                 </NotAuthorized>
@@ -27,7 +27,7 @@
             </AuthorizeView>
         </div>
         <div class="nav-item px-3">
-            <AuthorizeView Roles="Admin">
+            <AuthorizeView Roles="Admin, User">
                 <NotAuthorized>
 
                 </NotAuthorized>
@@ -39,7 +39,7 @@
             </AuthorizeView>
         </div>
         <div class="nav-item px-3">
-            <AuthorizeView Roles="Admin,Studio">
+            <AuthorizeView Roles="Admin,User">
                 <NotAuthorized>
 
                 </NotAuthorized>
@@ -51,7 +51,7 @@
             </AuthorizeView>
         </div>
         <div class="nav-item px-3">
-            <AuthorizeView Roles="Admin,Studio,User">
+            <AuthorizeView Roles="Admin,User">
                 <NotAuthorized>
                 </NotAuthorized>
                 <Authorized>
@@ -62,7 +62,7 @@
             </AuthorizeView>
         </div>
         <div class="nav-item px-3">
-            <AuthorizeView Roles="Admin,Studio">
+            <AuthorizeView Roles="Admin,User">
                 <NotAuthorized>
                 </NotAuthorized>
                 <Authorized>
@@ -73,7 +73,7 @@
             </AuthorizeView>
         </div>
         <div class="nav-item px-3">
-            <AuthorizeView Roles="Admin,Studio">
+            <AuthorizeView Roles="Admin,User">
                 <NotAuthorized>
                 </NotAuthorized>
                 <Authorized>
