--- a/Application.Web.Client/Pages/HotelsPage/IndexHotels.razor
+++ b/Application.Web.Client/Pages/HotelsPage/IndexHotels.razor
@@ -18,6 +18,7 @@
                 <th scope="col">Hotel ID</th>
                 <th scope="col">Hotel Name</th>
                 <th scope="col">Count Of Stars Hotel</th>
+                    <th scope="col">City Id</th>
             </tr>
             </thead>
             <tbody>
