--- a/Application.Web.Client/PageComponents/GameForm.razor
+++ b/Application.Web.Client/PageComponents/GameForm.razor
@@ -98,8 +98,8 @@
         imageUrl = null;
     }
 
-    async Task<IEnumerable<TourOperator>> SearchHandler(string searchText)
-    {
-        return _db.GetAllTourOperators();
-    }
+    //async Task<IEnumerable<TourOperator>> SearchHandler(string searchText)
+    //{
+    //    return _db.GetAllTourOperators();
+    //}
 }
