--- a/Application.Web.Client/Shared/NavMenu.razor
+++ b/Application.Web.Client/Shared/NavMenu.razor
@@ -52,6 +52,17 @@
         <div class="nav-item px-3">
             <AuthorizeView Roles="Admin,User">
                 <NotAuthorized>
+                </NotAuthorized>
+                <Authorized>
+                    <NavLink class="nav-link" href="transportOfTour">
+                        <span class="oi oi-paperclip" aria-hidden="true"></span> Transport Of Tours
+                    </NavLink>
+                </Authorized>
+            </AuthorizeView>
+        </div>
+        <div class="nav-item px-3">
+            <AuthorizeView Roles="Admin,User">
+                <NotAuthorized>
 
                 </NotAuthorized>
                 <Authorized>
