--- a/Application.Desktop/OrderWindow.xaml
+++ b/Application.Desktop/OrderWindow.xaml
@@ -13,14 +13,11 @@
         MinHeight="300" MinWidth="400">
     <Grid>
         <StackPanel >
-            <Label>ФИО</Label>
-            <TextBox x:Name="FIO_tb"></TextBox>
-            <Label>Дата рождения</Label>
-            <TextBox x:Name="DateOfB_tb"></TextBox>
-            <Label>Тур</Label>
-            <ComboBox x:Name="Tour_cb" DisplayMemberPath="TourName"></ComboBox>
-            <Label>Номер телефона</Label>
-            <TextBox x:Name="Phone_tb"></TextBox>
+            <Label>Выберите тур</Label>
+            <ComboBox x:Name="Tour_cb" ></ComboBox>
+            <Label>Выберите транспорт</Label>
+            <ComboBox x:Name="Transport_cb" DisplayMemberPath="TypeOfTransport"></ComboBox>
+
             <Button Click="Button_Click" Style="{DynamicResource buttonFind}" Margin="0,20,0,0">Оставить заявку</Button>
         </StackPanel>
     </Grid>
