--- a/Application.Web.Client/Shared/NavMenu.razor
+++ b/Application.Web.Client/Shared/NavMenu.razor
@@ -27,6 +27,17 @@
             </AuthorizeView>
         </div>
         <div class="nav-item px-3">
+            <AuthorizeView Roles="Admin,User">
+                <NotAuthorized>
+                </NotAuthorized>
+                <Authorized>
+                    <NavLink class="nav-link" href="order">
+                        <span class="oi oi-puzzle-piece" aria-hidden="true"></span> Place on Order
+                    </NavLink>
+                </Authorized>
+            </AuthorizeView>
+        </div>
+        <div class="nav-item px-3">
             <AuthorizeView Roles="Admin, User">
                 <NotAuthorized>
 
@@ -34,6 +45,17 @@
                 <Authorized>
                     <NavLink class="nav-link" href="transport">
                         <span class="oi oi-aperture" aria-hidden="true"></span> Transport
+                    </NavLink>
+                </Authorized>
+            </AuthorizeView>
+        </div>
+        <div class="nav-item px-3">
+            <AuthorizeView Roles="Admin,User">
+                <NotAuthorized>
+                </NotAuthorized>
+                <Authorized>
+                    <NavLink class="nav-link" href="transportOfTour">
+                        <span class="oi oi-paperclip" aria-hidden="true"></span> Transport Of Tours
                     </NavLink>
                 </Authorized>
             </AuthorizeView>
@@ -67,7 +89,7 @@
                 </NotAuthorized>
                 <Authorized>
                     <NavLink class="nav-link" href="tours/create">
-                        <span class="oi oi-puzzle-piece" aria-hidden="true"></span> Create New Tour
+                        <span class="oi oi-star" aria-hidden="true"></span> Create New Tour
                     </NavLink>
                 </Authorized>
             </AuthorizeView>
@@ -78,7 +100,7 @@
                 </NotAuthorized>
                 <Authorized>
                     <NavLink class="nav-link" href="cities">
-                        <span class="oi oi-puzzle-piece" aria-hidden="true"></span> Create New City
+                        <span class="oi oi-key" aria-hidden="true"></span> Create New City
                     </NavLink>
                 </Authorized>
             </AuthorizeView>
@@ -89,7 +111,7 @@
                 </NotAuthorized>
                 <Authorized>
                     <NavLink class="nav-link" href="hotels">
-                        <span class="oi oi-puzzle-piece" aria-hidden="true"></span> Create New Hotel
+                        <span class="oi oi-eye" aria-hidden="true"></span> Create New Hotel
                     </NavLink>
                 </Authorized>
             </AuthorizeView>
