--- a/Application.Web.Client/Pages/TourPages/CreateTour.razor
+++ b/Application.Web.Client/Pages/TourPages/CreateTour.razor
@@ -12,7 +12,7 @@
 
 <div class="row">
     <div class="col">
-        <GameForm Game="tour" OnValidSubmit="AddNewTour" NotSelectedGenres="notSelectedTransports"></GameForm>
+        <TourForm Tour="tour" OnValidSubmit="AddNewTour" NotSelectedGenres="notSelectedTransports"></TourForm>
     </div>
 </div>
 
