--- a/Application.Web.Client/Pages/Transport/CreateTransport.razor
+++ b/Application.Web.Client/Pages/Transport/CreateTransport.razor
@@ -10,7 +10,7 @@
 </div>
 <div class="row">
     <div class="col-6">
-        <FormForGenre Genre="transport" OnValidSubmit="AddNewGenre" />
+        <FormForTransport Transport="transport" OnValidSubmit="AddNewGenre" />
     </div>
 </div>
 
