--- a/Application.Web.Client/Pages/TourPages/EditTour.razor
+++ b/Application.Web.Client/Pages/TourPages/EditTour.razor
@@ -1,16 +1,16 @@
-﻿@page "/tours/edit/{GameId:int}"
+﻿@page "/tours/edit/{TourId:int}"
 @using Application.Web.Client.Data.Repository
 @inject IRepository _db
 
 <div class="row">
     <div class="col">
-        <h1 class="text-info text-center text-uppercase ">Edit Game</h1>
+        <h1 class="text-info text-center text-uppercase ">Edit Tour</h1>
     </div>
 </div>
 
 <div class="row">
     <div class="col">
-        <GameForm Game="tour" OnValidSubmit="EditTheGame"></GameForm>
+        <TourForm Tour="tour" OnValidSubmit="EditTheTour"></TourForm>
     </div>
 </div>
 
@@ -25,7 +25,7 @@
         tour = _db.GetTourById(TourId);
     }
 
-    void EditTheGame()
+    void EditTheTour()
     {
 
     }
