Edit db. Rename ToutOperator->TourOperator

--- a/Application.Web.Client/PageComponents/FormForOrders.razor
+++ b/Application.Web.Client/PageComponents/FormForOrders.razor
@@ -10,8 +10,8 @@
             <Input class="form-control mb-2" @bind-Value="Order.TourId"/>
             <ValidationMessage For="(() => Order.TourId)"/>
             <h3>Tour Operator Id</h3>
-            <Input class="form-control mb-2" @bind-Value="Order.ToutOperatorId"/>
-            <ValidationMessage For="(() => Order.ToutOperatorId)"/>
+            <Input class="form-control mb-2" @bind-Value="Order.TourOperatorId"/>
+            <ValidationMessage For="(() => Order.TourOperatorId)"/>
             <h3>User Id</h3>
             <Input class="form-control mb-2" @bind-Value="Order.UserId"/>
             <ValidationMessage For="(() => Order.UserId)"/>
