--- a/Application.Web.Client/Pages/OrderPage/IndexOrder.razor
+++ b/Application.Web.Client/Pages/OrderPage/IndexOrder.razor
@@ -27,7 +27,7 @@
                     <tr scope="row">
                     <td>@item.OrderId</td>
                         <td>@item.TourId</td>
-                        <td>@item.ToutOperatorId</td>
+                        <td>@item.TourOperatorId</td>
                         <td>@item.UserId</td>
                 </tr>
             }
