--- a/Application.Web.Client/Pages/Transport/IndexTransport.razor
+++ b/Application.Web.Client/Pages/Transport/IndexTransport.razor
@@ -6,9 +6,18 @@
     </div>
 </div>
 <div class="row">
-    <div class="col">
-        <a class="btn btn-info" href="/transport/create">Add New Transport</a>
-    </div>
+    <AuthorizeView Roles="Admin">
+        <NotAuthorized>
+
+        </NotAuthorized>
+        <Authorized>
+
+            <div class="col">
+                <a class="btn btn-info" href="/transport/create">Add New Transport</a>
+            </div>
+        </Authorized>
+    </AuthorizeView>
+
 </div>
 
 @code {
