Убрал возможность выбирать роль, Роль по умолчанию - User.

--- a/Application.Web.Client/Shared/AccoutManagement.razor
+++ b/Application.Web.Client/Shared/AccoutManagement.razor
@@ -51,12 +51,12 @@
                         <InputText type="password" @bind-Value="regFormModel.PasswordConfirm"></InputText>
                     </label>
                 </div>
-                <div>
+                @*<div>
                     <label>
                         Select role:
                         <Select DataSource="_roles" type="role" @bind-Value="regFormModel.Role"></Select>
                     </label>
-                </div>
+                </div>*@
                 <div>
                     <label>
                         Full Name:
