--- a/Application.Desktop/RegWindow.xaml
+++ b/Application.Desktop/RegWindow.xaml
@@ -1,18 +1,23 @@
-﻿<Window x:Class="Application.Desktop.AuthWindow"
+﻿<Window x:Class="Application.Desktop.RegWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Application.Desktop"
         mc:Ignorable="d"
-        Title="AuthWindow"  
-        Height="300" Width="400" 
+        Title="RegWindow" Height="300" Width="400" 
         Icon="Icons/logoIcon.png" 
         WindowStartupLocation="CenterScreen" 
         WindowStyle="SingleBorderWindow" 
         MinHeight="300" MinWidth="400">
     <Grid HorizontalAlignment="Center" VerticalAlignment="Center">
-        <StackPanel >
+        <Grid.RowDefinitions>
+            <RowDefinition></RowDefinition>
+            <RowDefinition></RowDefinition>
+        </Grid.RowDefinitions>
+        <Button Grid.Row="0" Click="Button_Click" Style="{DynamicResource buttonFind}" Height="40" >Войти</Button>
+
+        <StackPanel Grid.Row="1" >
             <Label>Логин</Label>
             <TextBox x:Name="FIO_tb"></TextBox>
             <Label>Пароль</Label>
